fixed styling for scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,45 +18,45 @@ body {
   max-height: 100vh;
 }
 
-.scroll-bar::-webkit-scrollbar {
+.scroll-bar::-webkit-scrollbar,.CodeMirror-vscrollbar::-webkit-scrollbar {
   width: 4px;
   height: 4px;
 }
 
-.scroll-bar::-webkit-scrollbar-button {
+.scroll-bar::-webkit-scrollbar-button,.CodeMirror-vscrollbar::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
 }
 
-.scroll-bar::-webkit-scrollbar-thumb {
+.scroll-bar::-webkit-scrollbar-thumb,.CodeMirror-vscrollbar::-webkit-scrollbar-thumb {
   background: #e1e1e1;
   border: 4px solid #ffffff;
   border-radius: 50px;
 }
 
-.scroll-bar::-webkit-scrollbar-thumb:hover {
+.scroll-bar::-webkit-scrollbar-thumb:hover,.CodeMirror-vscrollbar::-webkit-scrollbar-thumb:hover {
   background: #ffffff;
 }
 
-.scroll-bar::-webkit-scrollbar-thumb:active {
+.scroll-bar::-webkit-scrollbar-thumb:active,.CodeMirror-vscrollbar::-webkit-scrollbar-thumb:active {
   background: #000000;
 }
 
-.scroll-bar::-webkit-scrollbar-track {
+.scroll-bar::-webkit-scrollbar-track,.CodeMirror-vscrollbar::-webkit-scrollbar-track {
   background: #666666;
   border: 0px none #ffffff;
   border-radius: 50px;
 }
 
-.scroll-bar::-webkit-scrollbar-track:hover {
+.scroll-bar::-webkit-scrollbar-track:hover,.CodeMirror-vscrollbar::-webkit-scrollbar-track:hover {
   background: #666666;
 }
 
-.scroll-bar::-webkit-scrollbar-track:active {
+.scroll-bar::-webkit-scrollbar-track:active,.CodeMirror-vscrollbar::-webkit-scrollbar-track:active {
   background: #333333;
 }
 
-.scroll-bar::-webkit-scrollbar-corner {
+.scroll-bar::-webkit-scrollbar-corner,.CodeMirror-vscrollbar::-webkit-scrollbar-corner {
   background: transparent;
 }
 
